# herdwatch

./: .gitignore  AGENTS.md  LICENSE  README.md  herdr-plugin.toml  pyproject.toml
.github/workflows/: ci.yml
assets/brand/: README.md
deploy/: dev.herdwatch.daemon.plist
docs/superpowers/plans/: 2026-07-01-herd-wait.md  2026-07-01-herdwatch.md  2026-07-02-task-progress.md  2026-07-11-socket-api-migration.md
docs/superpowers/specs/: 2026-07-01-herd-wait-design.md  2026-07-01-herdwatch-design.md  2026-07-02-task-progress-design.md  2026-07-11-socket-api-migration-design.md
src/herdwatch/: aggregate.py  cache.py  cli.py  config.py  daemon.py  doctor.py  gitctx.py  herdr.py  herdr_socket.py  markers.py  models.py  progress.py  service.py  state.py
src/herdwatch/probes/: base.py  bgjobs.py  ci.py  marker.py  roborev.py
tests/: conftest.py  test_aggregate.py  test_cache.py  test_cli.py  test_config.py  test_daemon.py  test_doctor.py  test_gitctx.py  test_herdr.py  test_herdr_socket.py  test_markers.py  test_models.py  test_probe_bgjobs.py  test_probe_ci.py  test_probe_marker.py  test_probe_roborev.py  test_progress.py  test_service.py  test_smoke.py  test_state.py
