[project]
name = "herdwatch"
version = "0.1.0"
description = "Show herdr agents as busy while their background work (CI, review, jobs) is still pending"
requires-python = ">=3.11"

[project.scripts]
herdwatch = "herdwatch.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
